fix: create user authentication
